updated get endpoint